Bug 547423 - Add Content-Type and Mime-Version header to the NNTP CancelMessage. r=jorgk